--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,14 @@
 
 
     <div class="well">
+
+      <form class="form-search">
+        <div class="input-append">
+          <input type="text" class="span3 search-query">
+          <button type="submit" class="btn btn-primary">Найти</button>
+        </div>
+      </form>
+
       <div class="carousel">
           <div class="row-fluid">
             <div class="span3"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /></a></div>
@@ -31,6 +39,30 @@
 
         <a class="left carousel-control" href="#" data-slide="prev">‹</a>
         <a class="right carousel-control" href="#" data-slide="next">›</a>
+      </div>
+    </div>
+
+
+    <div class="wall">
+      <div class="well">
+        <ul class="pager">
+          <li>
+            <a href="#">&larr; Назад</a>
+          </li>
+        </ul>
+
+        <ul class="breadcrumb">
+          <li><a href="#">Home</a> <span class="divider">/</span></li>
+          <li><a href="#">Folder 1</a> <span class="divider">/</span></li>
+          <li class="active">Folder 2</li>
+        </ul>
+      
+        <ul class="pager">
+          <li>
+            <a href="#">Вперед &rarr;</a>
+          </li>
+        </ul>
+        <div class="clear"></div>
       </div>
     </div>
 
