--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <script src="http://code.jquery.com/jquery-latest.js"></script>
   </head>
   <body>
-
+  
   <!--   <ul class="menu">
       <li><a href="#/view1">view1</a></li>
       <li><a href="#/view2">view2</a></li>
@@ -31,12 +31,24 @@
         </div>
       </form>
 
-      <div class="carousel">
+      <div ng-view class="carousel">
           <div class="row-fluid">
-            <div class="span3"><a href="#x" class="thumbnail"><img class='carousel_img_0' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div>
-            <div class="span3"><a href="#x" class="thumbnail"><img class='carousel_img_1' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div>
-            <div class="span3"><a href="#x" class="thumbnail"><img class='carousel_img_2' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div>
-            <div class="span3"><a href="#x" class="thumbnail"><img class='carousel_img_3' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div>
+
+
+<!-- ???            
+            <div ng-repeat="img in phone.images" class="span3">
+              <a href="#" class="thumbnail">
+                <img class='carousel_img_0' ng-src="{{img}}" width='231px' alt="Image" />
+              </a>
+            </div> -->
+
+
+
+
+            <!-- <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_0' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div> -->
+            <!-- <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_1' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div> -->
+            <!-- <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_2' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div> -->
+            <!-- <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_3' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div> -->
           </div>
 
         <a class="left carousel-control" href="#" data-slide="prev">‹</a>
@@ -53,9 +65,9 @@
           </li>
         </ul>
         <ul class="breadcrumb">
-          <li><a href="#">Home</a> <span class="divider">/</span></li>
-          <li><a href="#">Folder 1</a> <span class="divider">/</span></li>
-          <li class="active">Folder 2</li>
+          <li><a href="#">Home</a></li>
+          <!-- <li><span class="divider">/</span> <a href="#">Folder 1</a></li> -->
+          <!-- <li class="active"> <span class="divider">/</span> Folder 2</li> -->
         </ul>
         <ul class="pager">
           <li>
@@ -65,28 +77,28 @@
         <div class="clear"></div>
 
         <div class="main">
-          <button class="btn span2 folder" type="button">Folder</button>
-          <button class="btn span2 folder" type="button">Folder</button>
-          <button class="btn span2 folder" type="button">Folder</button>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
+          <!-- <button class="btn span2 folder" type="button">Folder</button> -->
+          <!-- <button class="btn span2 folder" type="button">Folder</button> -->
+          <!-- <button class="btn span2 folder" type="button">Folder</button> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
           <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
         </div>
       </div>
