--- a/app/index.html
+++ b/app/index.html
@@ -16,10 +16,10 @@
       <li><a href="#/view2">view2</a></li>
     </ul>
 
-    <div ng-view></div>
 
     <div>Angular seed app: v<span app-version></span></div>
   -->
+    <div ng-view></div>
     <div id="gmail"></div>
 
     <div class="well">
@@ -31,7 +31,7 @@
         </div>
       </form>
 
-      <div ng-view class="carousel">
+      <div class="carousel">
           <div class="row-fluid">
 
 
