--- a/app/index.html
+++ b/app/index.html
@@ -45,10 +45,10 @@
 
 
 
-            <!-- <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_0' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div> -->
-            <!-- <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_1' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div> -->
-            <!-- <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_2' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div> -->
-            <!-- <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_3' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div> -->
+            <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_0' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div>
+            <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_1' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div>
+            <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_2' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div>
+            <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_3' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div>
           </div>
 
         <a class="left carousel-control" href="#" data-slide="prev">‹</a>
@@ -130,7 +130,7 @@
   <script src="js/directives.js"></script>
   <script src="js/carusel.js"></script>
   <script type="text/javascript">
-    getPicture('birds',2);
+    getPicture('text',2);
   </script>
   </body>
 </html>
