--- a/app/index.html
+++ b/app/index.html
@@ -123,6 +123,7 @@
   <textarea class="text_area" rows="4" placeholder='Dropdown with textarea for import/export of JSON folders structure'></textarea>
 
   <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular/angular-resource.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
