--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="Galery">
   <head>
     <meta charset="utf-8">
     <title>My AngularJS App</title>
@@ -10,7 +10,7 @@
     <script src="http://code.jquery.com/jquery-latest.js"></script>
   </head>
   <body>
-  
+
   <!--   <ul class="menu">
       <li><a href="#/view1">view1</a></li>
       <li><a href="#/view2">view2</a></li>
@@ -19,8 +19,6 @@
 
     <div>Angular seed app: v<span app-version></span></div>
   -->
-    <div ng-view></div>
-    <div id="gmail"></div>
 
     <div class="well">
 
@@ -31,31 +29,8 @@
         </div>
       </form>
 
-      <div class="carousel">
-          <div class="row-fluid">
-
-
-<!-- ???            
-            <div ng-repeat="img in phone.images" class="span3">
-              <a href="#" class="thumbnail">
-                <img class='carousel_img_0' ng-src="{{img}}" width='231px' alt="Image" />
-              </a>
-            </div> -->
-
-
-
-
-            <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_0' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div>
-            <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_1' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div>
-            <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_2' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div>
-            <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_3' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div>
-          </div>
-
-        <a class="left carousel-control" href="#" data-slide="prev">‹</a>
-        <a class="right carousel-control" href="#" data-slide="next">›</a>
-      </div>
+      <div ng-view></div>
     </div>
-
 
     <div class="wall">
       <div class="well">
@@ -122,16 +97,13 @@
   <div class="clear"></div>
   <textarea class="text_area" rows="4" placeholder='Dropdown with textarea for import/export of JSON folders structure'></textarea>
 
-  <script src="lib/angular/angular.js"></script>
-  <script src="lib/angular/angular-resource.js"></script>
+
+  <script src="http://code.angularjs.org/1.2.0-rc.2/angular.min.js"></script>
+  <script src="http://code.angularjs.org/1.2.0-rc.2/angular-resource.min.js"></script>
+  <script src="http://code.angularjs.org/1.2.0-rc.2/angular-route.min.js"></script>
+
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
-  <script src="js/carusel.js"></script>
-  <script type="text/javascript">
-    getPicture('text',2);
-  </script>
   </body>
 </html>
