--- a/app/index.html
+++ b/app/index.html
@@ -1,95 +1,93 @@
 <!doctype html>
 <html lang="en" ng-app="Galery">
-  <head>
-    <meta charset="utf-8">
-    <title>My AngularJS App</title>
-    <link rel="stylesheet" href="css/reset.css"/>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/carusel_images.css">
-    <link rel="stylesheet" href="css/app.css"/>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>My AngularJS App</title>
+  <link rel="stylesheet" href="css/reset.css"/>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/carusel_images.css">
+  <link rel="stylesheet" href="css/app.css"/>
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
+</head>
+<body ng-controller="GaleryCtrl">
+  <div class="well">
+    <form class="form-search">
+      <div class="input-append">
+        <input type="text" class="span3 search-query" maxlength="10" >
+        <button type="submit" class="btn btn-primary">Найти</button>
+      </div>
+    </form>
+    <div class="carousel">
+      <div class="row-fluid">
+        <div ng-repeat="photo in photos" class="span3">
+          <a href="#" class="thumbnail">
+            <img class='carousel_img_$index' ng-src="{{photo}}" width='231px' alt="Image" />
+          </a>
+        </div>
+        <a class="left carousel-control" href="#" data-slide="prev">‹</a>
+        <a class="right carousel-control" href="#" data-slide="next">›</a>
+      </div>
+    </div>
+  </div>
 
-  <!--   <ul class="menu">
-      <li><a href="#/view1">view1</a></li>
-      <li><a href="#/view2">view2</a></li>
-    </ul>
-
-
-    <div>Angular seed app: v<span app-version></span></div>
-  -->
-
+  <div class="wall">
     <div class="well">
+      <ul class="pager">
+        <li>
+          <a href="#">&larr; Назад</a>
+        </li>
+      </ul>
+      <ul class="breadcrumb">
+        <li><a href="#">Home</a></li>
+        <!-- <li><span class="divider">/</span> <a href="#">Folder 1</a></li> -->
+        <!-- <li class="active"> <span class="divider">/</span> Folder 2</li> -->
+      </ul>
+      <ul class="pager">
+        <li>
+          <a href="#">Add folder <b>+</b> </a>
+        </li>
+      </ul>
+      <div class="clear"></div>
 
-      <form class="form-search">
-        <div class="input-append">
-          <input type="text" class="span3 search-query" maxlength="10" >
-          <button type="submit" class="btn btn-primary">Найти</button>
-        </div>
-      </form>
-
-      <div ng-view></div>
-    </div>
-
-    <div class="wall">
-      <div class="well">
-        <ul class="pager">
-          <li>
-            <a href="#">&larr; Назад</a>
-          </li>
-        </ul>
-        <ul class="breadcrumb">
-          <li><a href="#">Home</a></li>
-          <!-- <li><span class="divider">/</span> <a href="#">Folder 1</a></li> -->
-          <!-- <li class="active"> <span class="divider">/</span> Folder 2</li> -->
-        </ul>
-        <ul class="pager">
-          <li>
-            <a href="#">Add folder <b>+</b> </a>
-          </li>
-        </ul>
-        <div class="clear"></div>
-
-        <div class="main">
-          <!-- <button class="btn span2 folder" type="button">Folder</button> -->
-          <!-- <button class="btn span2 folder" type="button">Folder</button> -->
-          <!-- <button class="btn span2 folder" type="button">Folder</button> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
-          <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
-        </div>
+      <div class="main">
+        <!-- <button class="btn span2 folder" type="button">Folder</button> -->
+        <!-- <button class="btn span2 folder" type="button">Folder</button> -->
+        <!-- <button class="btn span2 folder" type="button">Folder</button> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div>
       </div>
     </div>
+  </div>
 
-    <div class="right_column">
-      <div class="well">
-        <div class="description">
-          <div class="span3"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /></a></div>
-          <div class="title">930523534.jpg</div>
-          <div class='definition'>Add date:</div>
-          <div>2013-09-23 13:22:59 +0300</div>
-          <button class="btn btn-large btn-block btn-primary" type="button">Download</button>
-        </div>
+  <div class="right_column">
+    <div class="well">
+      <div class="description">
+        <div class="span3"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /></a></div>
+        <div class="title">930523534.jpg</div>
+        <div class='definition'>Add date:</div>
+        <div>2013-09-23 13:22:59 +0300</div>
+        <button class="btn btn-large btn-block btn-primary" type="button">Download</button>
       </div>
     </div>
+  </div>
 
   <div class="clear"></div>
   <button class="btn btn-large btn-primary" type="button">Load from JSON</button>
@@ -105,5 +103,5 @@
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
-  </body>
+</body>
 </html>
