--- a/app/index.html
+++ b/app/index.html
@@ -11,16 +11,17 @@
 </head>
 <body ng-controller="GaleryCtrl">
   <div class="well">
-    <form class="form-search">
+    <form class="form-search" ng-submit="searchPhotos()">
       <div class="input-append">
-        <input type="text" class="span3 search-query" maxlength="10" >
+        <input type="text" class="span3 search-query" maxlength="10" ng-model='search'>
         <button type="submit" class="btn btn-primary">Найти</button>
+        <i ng-show='loader'>A</i>
       </div>
     </form>
     <div class="carousel">
       <div class="row-fluid">
         <div ng-repeat="photo in photos" class="span3">
-          <a href="#" class="thumbnail">
+          <a href="#" class="thumbnail" ng-click='addToFolder(photo)'>
             <img class='carousel_img_$index' ng-src="{{photo}}" width='231px' alt="Image" />
           </a>
         </div>
@@ -39,8 +40,8 @@
       </ul>
       <ul class="breadcrumb">
         <li><a href="#">Home</a></li>
-        <!-- <li><span class="divider">/</span> <a href="#">Folder 1</a></li> -->
-        <!-- <li class="active"> <span class="divider">/</span> Folder 2</li> -->
+        <li><span class="divider">/</span> <a href="#">Folder 1</a></li>
+        <li class="active"> <span class="divider">/</span> Folder 2</li>
       </ul>
       <ul class="pager">
         <li>
@@ -50,7 +51,7 @@
       <div class="clear"></div>
 
       <div class="main">
-        <!-- <button class="btn span2 folder" type="button">Folder</button> -->
+        <button class="btn span2 folder" type="button">Folder</button>
         <!-- <button class="btn span2 folder" type="button">Folder</button> -->
         <!-- <button class="btn span2 folder" type="button">Folder</button> -->
         <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
