--- a/app/index.html
+++ b/app/index.html
@@ -10,13 +10,13 @@
   <script src="http://code.jquery.com/jquery-latest.js"></script>
 </head>
 <body ng-controller="GaleryCtrl">
-  <div class="well">
+  <div class="well" ng-show='loader' ng-cloak >
     <form class="form-search" ng-submit="searchPhotos()">
       <div class="input-append">
         <input type="text" class="span3 search-query" maxlength="10" ng-model='search'>
         <button type="submit" class="btn btn-primary">Найти</button>
-        <i ng-show='loader'>A</i>
       </div>
+      <img ng-show='ajax_loading' src="img/ajax_loader.gif" width="25px">
     </form>
     <div class="carousel">
       <div class="row-fluid">
@@ -28,6 +28,25 @@
         <a class="left carousel-control" href="#" data-slide="prev">‹</a>
         <a class="right carousel-control" href="#" data-slide="next">›</a>
       </div>
+    </div>
+  </div>
+
+  <div class="well" ng-hide='loader' ng-cloak >
+    <form class="form-search" ng-submit="searchPhotos()">
+      <div class="input-append">
+        <input type="text" class="span3 search-query" maxlength="10" ng-model='search'>
+        <button type="submit" class="btn btn-primary">Найти</button>
+      </div>
+    </form>
+    <div class="carousel">
+      <div class="row-fluid">
+        <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_0' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div>
+        <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_1' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div>
+        <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_2' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div>
+        <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_3' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div>
+      </div>
+      <a class="left carousel-control" href="#" data-slide="prev">‹</a>
+      <a class="right carousel-control" href="#" data-slide="next">›</a>
     </div>
   </div>
 
