--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
   <script src="http://code.jquery.com/jquery-latest.js"></script>
 </head>
 <body ng-controller="GaleryCtrl">
-  <div class="well">
+  <div class="well" ng-show='loader' ng-cloak >
     <form class="form-search" ng-submit="searchPhotos()">
       <div class="input-append">
         <input type="text" class="span3 search-query" maxlength="10" ng-model='search'>
@@ -20,7 +20,7 @@
     </form>
     <div class="carousel">
       <div class="row-fluid">
-        <div ng-repeat="photo in photos track by $index" class="span3">
+        <div ng-repeat="photo in photos" class="span3">
           <a href="#" class="thumbnail" ng-click='addToFolder(photo)'>
             <img class='carousel_img_$index' ng-src="{{photo}}" width='231px' alt="Image" />
           </a>
@@ -31,7 +31,7 @@
     </div>
   </div>
 
-<!--   <div class="well" ng-hide='loader' ng-cloak >
+  <div class="well" ng-hide='loader' ng-cloak >
     <form class="form-search" ng-submit="searchPhotos()">
       <div class="input-append">
         <input type="text" class="span3 search-query" maxlength="10" ng-model='search'>
@@ -48,7 +48,7 @@
       <a class="left carousel-control" href="#" data-slide="prev">‹</a>
       <a class="right carousel-control" href="#" data-slide="next">›</a>
     </div>
-  </div> -->
+  </div>
 
   <div class="wall">
     <div class="well">
