--- a/app/index.html
+++ b/app/index.html
@@ -70,10 +70,10 @@
       <div class="clear"></div>
 
       <div class="main">
-        <button class="btn span2 folder" type="button">Folder</button>
+        <button class="btn span2 folder" type="button">{{file.name}}</button>
         <!-- <button class="btn span2 folder" type="button">Folder</button> -->
         <!-- <button class="btn span2 folder" type="button">Folder</button> -->
-        <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
+        <div  ng-repeat="file in desctop" class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> {{ file.name }} </a></div>
         <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
         <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
         <!-- <div class="span2"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /> 9378239123.jpg </a></div> -->
