--- a/app/index.html
+++ b/app/index.html
@@ -23,12 +23,12 @@
     <div class="carousel">
       <div class="row-fluid">
         <div ng-repeat="photo in photos" class="span3">
-          <a href="#" class="thumbnail" ng-click='addToFile(photo)'>
+          <a href="#" class="thumbnail" ng-click='addToFile(photo); $event.stopPropagation(); $event.preventDefault();'>
             <img class='carousel_img_$index' ng-src="{{photo}}" width='231px' alt="Image" />
           </a>
         </div>
-        <a ng-click="rotateCarusel('left')" disabled="{{isDisabled}}" ng-show="isDisabled" class="left carousel-control" href="#" data-slide="prev">‹</a>
-        <a ng-click="rotateCarusel('right')" class="right carousel-control" href="#" data-slide="next">›</a>
+        <a ng-click="rotateCarusel('left'); $event.stopPropagation(); $event.preventDefault();" disabled="{{isDisabled}}" ng-show="isDisabled" class="left carousel-control" href="#" data-slide="prev">‹</a>
+        <a ng-click="rotateCarusel('right'); $event.stopPropagation(); $event.preventDefault();" class="right carousel-control" href="#" data-slide="next">›</a>
       </div>
     </div>
   </div>
@@ -60,16 +60,16 @@
         </li>
       </ul>
       <ul class="breadcrumb">
-        <li><a ng-click='chageFolder(0)' href="#">Home</a></li>
+        <li><a ng-click='chageFolder(0); $event.stopPropagation(); $event.preventDefault();' href="#">Home</a></li>
         <li ng-repeat="crumb in breadcrumbs" ng-class="{active: $last}" >
           <span class='divider'>/</span><!-- &#9658; -->
-          <a ng-if="!$last" ng-click='chageFolder(crumb.id)' href="#">{{crumb.name}}</a>
+          <a ng-if="!$last" ng-click='chageFolder(crumb.id); $event.stopPropagation(); $event.preventDefault();' href="#">{{crumb.name}}</a>
           <span ng-if="$last">{{crumb.name}}</span>
         </li>
       </ul>
       <ul class="pager">
         <li>
-          <a ng-click='addFolder()' href="#">Add folder <b>+</b></a>
+          <a ng-click='addFolder(); $event.stopPropagation(); $event.preventDefault();' href="#">Add folder <b>+</b></a>
         </li>
       </ul>
       <div class="clear"></div>
